@@ -20,6 +20,9 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
   ok(TestCase::Increment->pre_inc_deref);
   ok(TestCase::Increment->pre_inc_package_var_access);
   ok(TestCase::Increment->pre_inc_array_field_access_constant_index);
+  
+  ok(TestCase::Increment->pre_inc_array_access_invocant_not_var);
+  ok(TestCase::Increment->pre_inc_array_field_access_invocant_not_var);
 }
 
 # Pre dec
