@@ -13,6 +13,48 @@ package TestCase::Increment {
   our $LONG_VALUE : long;
   our $FLOAT_VALUE : float;
   our $DOUBLE_VALUE : double;
+  
+  sub pre_inc_array_access_invocant_not_var : int () {
+    my $nums_of_nums = new int[][2];
+    $nums_of_nums->[0] = new int[1];
+    $nums_of_nums->[1] = new int[1];
+    
+    my $ret1 = ++$nums_of_nums->[0][0];
+    my $ret2 = $nums_of_nums->[1][0]++;
+    
+    if ($nums_of_nums->[0][0] == 1) {
+      if ($ret1 == 1) {
+        if ($nums_of_nums->[1][0] == 1) {
+          if ($ret2 == 0) {
+            return 1;
+          }
+        }
+      }
+    }
+    
+    return 0;
+  }
+
+  sub pre_inc_array_field_access_invocant_not_var : int () {
+    my $nums_of_nums = new TestCase::Point_i3[][2];
+    $nums_of_nums->[0] = new TestCase::Point_i3[1];
+    $nums_of_nums->[1] = new TestCase::Point_i3[1];
+    
+    my $ret1 = ++$nums_of_nums->[0][0]{x};
+    my $ret2 = $nums_of_nums->[1][0]{x}++;
+    
+    if ($nums_of_nums->[0][0]{x} == 1) {
+      if ($ret1 == 1) {
+        if ($nums_of_nums->[1][0]{x} == 1) {
+          if ($ret2 == 0) {
+            return 1;
+          }
+        }
+      }
+    }
+    
+    return 0;
+  }
 
   sub post_dec_array_field_access_constant_index : int () {
     my $values_point_byte = new TestCase::Point_b3[1];
